Increase spacing and add form appearance parameter
- Updated `margin-bottom` from `18px` to `32px` in multiple SCSS files for improved spacing.
- Added `FormAppearance` parameter to `TnTWizardFormStep` class to specify form appearance, defaulting to `Outlined`.
- Modified `Render` method in `TnTWizardFormStep` to include the new `FormAppearance` parameter when rendering the `TnTForm`.

--- a/TnTComponents/Form/TnTInputCheckbox.razor.scss
+++ b/TnTComponents/Form/TnTInputCheckbox.razor.scss
@@ -14,6 +14,7 @@
     min-width: 48px;
     min-height: 48px;
     position: relative;
+    margin-bottom: 32px;
 
     &:has(.tnt-start-icon):has(.tnt-end-icon) {
         grid-template-areas: "start-icon checkbox end-icon";
