--- a/TnTComponents/Form/TnTInputSelect.razor.scss
+++ b/TnTComponents/Form/TnTInputSelect.razor.scss
@@ -43,7 +43,7 @@
             cursor: pointer;
             appearance: menulist;
 
-            option {
+            option, optgroup {
                 background-color: base.$background-color;
                 color: base.$text-color;
             }
