--- a/TnTComponents/Form/TnTInputRadioGroup.razor.scss
+++ b/TnTComponents/Form/TnTInputRadioGroup.razor.scss
@@ -150,6 +150,7 @@
             top: -1px;
             left: -1px;
             transition: 250ms ease-in-out;
+            pointer-events: none;
         }
 
         &:before {
