--- a/TnTComponents/Form/TnTInputSelect.razor.scss
+++ b/TnTComponents/Form/TnTInputSelect.razor.scss
@@ -167,6 +167,7 @@
             top: -1px;
             left: -1px;
             transition: 250ms ease-in-out;
+            pointer-events: none;
         }
 
         &:before {
