Refactor Form inputs and enhance component extensibility
- Updated `Form.razor` to use `SelectEnum` for select input.
- Added a new radio button group bound to `RadioEnum?`.
- Changed `Select` property type from string to `SelectEnum`.
- Introduced private enum `SelectEnum` with values One to Nine.
- Made `OnChangeAsync` method in `TnTInputBase` virtual.
- Updated CSS files to include `pointer-events: none;`.
- Overrode `OnChangeAsync` in `TnTInputSelect` for better value handling.

--- a/TnTComponents/Form/TnTInputCheckbox.razor.scss
+++ b/TnTComponents/Form/TnTInputCheckbox.razor.scss
@@ -136,6 +136,7 @@
         transition: 250ms ease-in-out;
         align-self: center;
         justify-self: center;
+        pointer-events: none;
         z-index: 1;
     }
 
@@ -152,6 +153,7 @@
         justify-self: center;
         z-index: 2;
         transform: translateY(-4px) rotateZ(45deg) rotateY(90deg);
+        pointer-events: none;
     }
 
     &:has(input:checked) {
