--- a/TnTComponents/Form/TnTInputFile.razor.scss
+++ b/TnTComponents/Form/TnTInputFile.razor.scss
@@ -86,6 +86,7 @@ $on-tint-color: var(--tnt-input-on-tint-color);
             top: -1px;
             left: -1px;
             transition: 250ms ease-in-out;
+            pointer-events: none;
         }
 
         &:before {
