--- a/TnTComponents/Form/TnTInputSwitch.razor.scss
+++ b/TnTComponents/Form/TnTInputSwitch.razor.scss
@@ -132,6 +132,7 @@
         align-self: center;
         justify-self: center;
         z-index: 1;
+        pointer-events: none;
     }
 
     &:after {
@@ -146,6 +147,7 @@
         border-radius: 50%;
         transform: translateX(-10px);
         z-index: 3;
+        pointer-events: none;
     }
 
     &:has(input:checked) {
