Refactor TnTDataGridCell and TnTDataGridHeaderCell
- Removed generic type parameter `<TGridItem>` from `TnTDataGridCell`.
- Made `ChildContent` property require an editor with `EditorRequired`.
- Eliminated `Item` and `CellId` properties for a more generic implementation.
- Updated `TnTDataGridHeaderCell` to inherit from the non-generic `TnTDataGridCell`.
- Ensured consistent rendering structure across both cell components.

--- a/TnTComponents/Grid/TnTDataGridHeaderCell.razor
+++ b/TnTComponents/Grid/TnTDataGridHeaderCell.razor
@@ -1,8 +1,7 @@
 ﻿@namespace TnTComponents.Grid
-@typeparam TGridItem
-@inherits TnTDataGridCell<TGridItem>
+@inherits TnTDataGridCell
 <th @attributes="AdditionalAttributes"
     class="@ElementClass"
     style="@ElementStyle">
     @ChildContent
-</th>
+</th> 
