--- a/TnTComponents/Core/TnTRippleEffect.razor.scss
+++ b/TnTComponents/Core/TnTRippleEffect.razor.scss
@@ -22,7 +22,7 @@ tnt-ripple-effect ::deep {
 
         &.tnt-rippling-mouse-down {
             transition: transform 1s ease-out;
-            transform: scale(2);
+            transform: scale(var(--tnt-ripple-max-size));
 
             &.tnt-rippling-mouse-up {
                 transition: transform 250ms ease-out, opacity 500ms ease-out;
