--- a/LiveTest/LiveTest.Client/Pages/DataGrid.razor
+++ b/LiveTest/LiveTest.Client/Pages/DataGrid.razor
@@ -1,7 +1,7 @@
 ﻿@page "/datagrid"
 @using LiveTest.Client.Components
 @using TnTComponents
-
-<DataGridComponent @rendermode="@RenderMode.InteractiveAuto" />
+@rendermode InteractiveAuto
+<DataGridComponent />
 
 
