Refactor data grid components for improved usability
- Updated event handling in `DataGridComponent.razor` to use `OnRowClicked`.
- Added project reference to `TnTComponents.Extensions` in `LiveTest.Client.csproj`.
- Enhanced `PaginatedGrid.razor` with a checkbox for empty state toggling.
- Improved empty state handling in `TnTDataGridBody.razor` and introduced `TnTDataGridBodyRowEmpty.razor`.
- Updated `TnTDataGridVirtualizedBody.razor` to utilize the new empty row component.
- Refactored `TnTInternalGridContext.cs` to streamline item access and sorting.
- Enforced rules against using virtualization and pagination together in `TnTDataGrid.razor`.
- Enhanced pagination event handling in `TnTPaginationState.cs` with new callbacks.
- Renamed properties in `TnTGridItemsProviderRequest.cs` for clarity.
- Added methods for refreshing data grid and managing pagination in `TnTDataGrid.razor.cs`.

These changes improve functionality, usability, and coding practices across the data grid components.

--- a/LiveTest/LiveTest.Client/Pages/PaginatedGrid.razor
+++ b/LiveTest/LiveTest.Client/Pages/PaginatedGrid.razor
@@ -1,11 +1,19 @@
 ﻿@page "/paginated"
 @using TnTComponents
 @using TnTComponents.Core
+@using TnTComponents.Extensions
 @using TnTComponents.Grid
 @rendermode InteractiveServer
 
-@* <div style="height: 60vh; overflow-y:scroll">
-    <TnTDataGrid Items="@Items" Pagination="_paginationState" OnRowClicked="RowClicked" TGridItem="DataGridItem" DataGridAppearance="DataGridAppearance.Stripped" Resizable="true">
+<div>
+    <label>
+        Empty
+        <input type="checkbox" @bind-value="_empty" />
+    </label>
+</div>
+
+<div style="height: 60vh; overflow-y:scroll">
+    <TnTDataGrid Items="@(_empty? Array.Empty<DataGridItem>().AsQueryable() : Items)" Pagination="_paginationState" OnRowClicked="RowClicked" TGridItem="DataGridItem" DataGridAppearance="DataGridAppearance.Stripped" Resizable="true">
         <TnTPropertyColumn Property="@(x => x.Column1)" Sortable="true" />
         <TnTPropertyColumn Property="@(x => x.Column2)" Sortable="true" TextAlign="TextAlign.Center" HeaderAlignment="TextAlign.Left" />
         <TnTPropertyColumn Property="@(x => x.Column3)" Format="MM/yyyy" HeaderAlignment="TextAlign.Right" />
@@ -17,7 +25,26 @@
         </TnTTemplateColumn>
     </TnTDataGrid>
 </div>
-<TnTComponents.Grid.TnTPaginationButtons PaginationState="@_paginationState"/> *@
+<TnTComponents.Grid.TnTPaginationButtons PaginationState="@_paginationState" />
+
+
+<h3>
+    Virtualized
+</h3>
+<div style="height: 60vh; overflow-y:scroll">
+    <TnTDataGrid ItemsProvider="@_provider" Pagination="_paginationState" OnRowClicked="RowClicked" TGridItem="DataGridItem" DataGridAppearance="DataGridAppearance.Stripped" Resizable="true">
+        <TnTPropertyColumn Property="@(x => x.Column1)" Sortable="true" />
+        <TnTPropertyColumn Property="@(x => x.Column2)" Sortable="true" TextAlign="TextAlign.Center" HeaderAlignment="TextAlign.Left" />
+        <TnTPropertyColumn Property="@(x => x.Column3)" Format="MM/yyyy" HeaderAlignment="TextAlign.Right" />
+        <TnTTemplateColumn>
+            <TnTButton OnClickCallback="() => ItemClicked(context)" Appearance="ButtonAppearance.Text" TextColor="TnTColor.OnSurface" BackgroundColor="TnTColor.Surface" StopPropagation="true">
+                <MaterialIcon Icon="@MaterialIcon.Edit" />
+                Edit
+            </TnTButton>
+        </TnTTemplateColumn>
+    </TnTDataGrid>
+</div>
+<TnTComponents.Grid.TnTPaginationButtons PaginationState="@_paginationState" />
 
 
 @code {
@@ -25,10 +52,12 @@
     private ITnTToastService _service { get; set; }
 
     private TnTPaginationState _paginationState = new() {
-            ItemsPerPage = 10
-        };
+        ItemsPerPage = 10
+    };
 
+    private bool _empty;
     private int _count;
+    private TnTGridItemsProvider<DataGridItem> _provider = default!;
 
     private IQueryable<DataGridItem>? Items;
     private static object _locker = new();
@@ -39,15 +68,29 @@
                 var list = new List<DataGridItem>();
                 foreach (var i in Enumerable.Range(1, 1000)) {
                     list.Add(new DataGridItem() {
-                            Column1 = Random.Shared.Next(1, 1000),
-                            Column2 = Guid.NewGuid().ToString(),
-                            Column3 = new DateTime(Random.Shared.Next(1, 10000), Random.Shared.Next(1, 13), Random.Shared.Next(1, 29))
-                        });
+                        Column1 = Random.Shared.Next(1, 1000),
+                        Column2 = Guid.NewGuid().ToString(),
+                        Column3 = new DateTime(Random.Shared.Next(1, 10000), Random.Shared.Next(1, 13), Random.Shared.Next(1, 29))
+                    });
                 }
                 _items = list;
             }
             Items = _items.AsQueryable();
         }
+
+        _provider = async request => {
+            await Task.Delay(1500);
+            var items = Items.Apply(request);
+
+            if (_empty) {
+                return new();
+            }
+
+            return new TnTComponents.Virtualization.TnTItemsProviderResult<DataGridItem> {
+                Items = items.ToList(),
+                TotalItemCount = Items.Count()
+            };
+        };
 
         await _paginationState.SetTotalItemCountAsync(Items.Count());
     }
