--- a/TnTComponents/Grid/Infrastructure/TnTDataGridVirtualizedBody.razor
+++ b/TnTComponents/Grid/Infrastructure/TnTDataGridVirtualizedBody.razor
@@ -4,7 +4,7 @@
 <tbody>
     <TnTVirtualize TItem="@((int, TGridItem))"
                    ItemsProvider="@ProvideVirtualizedItemsAsync"
-    @ref="_virtualize">
+                   @ref="_virtualize">
         <ItemTemplate>
             <TnTDataGridBodyRow aria-rowindex="@context.Item1" Item="@context.Item2" />
         </ItemTemplate>
@@ -23,14 +23,7 @@
             }
         </LoadingTemplate>
         <EmptyTemplate>
-            <tr style="@($"height: {Context.Grid.ItemSize}px")" aria-rowindex="2">
-                @if (Context.RowClickCallback.HasDelegate) { // Prepend one more for the ::before element.
-                                                            <td></td>
-                }
-                <td class="tnt-empty-content-row" colspan="@(Context.Columns.Count())">
-                    No content to show.
-                </td>
-            </tr>
+           <TnTDataGridBodyRowEmpty TGridItem="@TGridItem"/>
         </EmptyTemplate>
 
     </TnTVirtualize>
