Enhance data grid sorting and performance improvements
- Set first two columns as default sort columns in DataGridComponent.razor.
- Added NewColumn property in TnTColumnBase to track newly registered columns.
- Updated OnParametersSet to automatically sort default columns.
- Introduced Refresh method in TnTDataGridBody for state changes.
- Added debounce mechanism in TnTDataGridVirtualizedBody to reduce redundant queries.
- Simplified item retrieval logic in TnTInternalGridContext.
- Updated RegisterColumn to set NewColumn property upon successful addition.
- Introduced UpdateItems method for better item management.
- Refactored rendering logic in TnTDataGrid for improved clarity.
- Streamlined RefreshDataGridAsync by removing unnecessary pagination calls.
- Made minor formatting and consistency improvements across the codebase.

--- a/LiveTest/LiveTest.Client/Components/DataGridComponent.razor
+++ b/LiveTest/LiveTest.Client/Components/DataGridComponent.razor
@@ -2,8 +2,8 @@
 @using TnTComponents.Grid
 <div style="height: 60vh; overflow-y:scroll">
     <TnTDataGrid Items="@Items" Virtualize="true" OnRowClicked="RowClicked" BackgroundColor="TnTColor.SecondaryContainer" TextColor="TnTColor.OnSecondaryContainer" TGridItem="DataGridItem" DataGridAppearance="DataGridAppearance.Stripped" Resizable="true">
-        <TnTPropertyColumn Property="@(x => x.Column1)" Sortable="true" />
-        <TnTPropertyColumn Property="@(x => x.Column2)" Sortable="true" TextAlign="TextAlign.Center" HeaderAlignment="TextAlign.Left" />
+        <TnTPropertyColumn Property="@(x => x.Column1)" Sortable="true" IsDefaultSortColumn="true"/>
+        <TnTPropertyColumn Property="@(x => x.Column2)" Sortable="true" TextAlign="TextAlign.Center" IsDefaultSortColumn="true" HeaderAlignment="TextAlign.Left" />
         <TnTPropertyColumn Property="@(x => x.Column3)" Format="MM/yyyy" HeaderAlignment="TextAlign.Right" />
         <TnTTemplateColumn>
             <TnTButton Appearance="ButtonAppearance.Text" TextColor="TnTColor.OnSurface" BackgroundColor="TnTColor.Surface" StopPropagation="true" OnClickCallback="@(() => ItemClicked(context))">
