--- a/TnTComponents/Grid/Infrastructure/TnTDataGridBodyRow.razor
+++ b/TnTComponents/Grid/Infrastructure/TnTDataGridBodyRow.razor
@@ -2,7 +2,10 @@
 @typeparam TGridItem
 @inherits TnTDataGridRow<TGridItem>
 
-<tr @attributes="AdditionalAttributes" class="@_elementClass" @onclick="@(Context.RowClickCallback.HasDelegate ? () => Context.RowClickCallback.InvokeAsync(Item) : null!)" @key="Context.ItemKey.Invoke(Item)" style="@($"height: {Context.Grid.ItemSize}px")">
+<tr @attributes="AdditionalAttributes"
+    class="@_elementClass"
+    @onclick="@(Context.RowClickCallback.HasDelegate ? () => Context.RowClickCallback.InvokeAsync(Item) : null!)"
+    @key="Context.ItemKey.Invoke(Item)" style="@($"height: {Context.Grid.ItemSize}px")">
     @foreach (var column in Context.Columns) {
         <TnTDataGridBodyCell Column="@column" Item="@Item" />
     }
