Enhance TnTDataGrid with resizable and interactive headers
- Added a placeholder `<th>` in `TnTDataGridHeaderRow.razor` for better interaction design when rows are clickable.
- Introduced `.tnt-interactable-placeholder` CSS class to manage the width of the placeholder column.
- Updated `ElementClass` in `TnTDataGrid.razor.cs` to ensure `tnt-resizable` class is applied when the grid is resizable.
- Documented the `Resizable` property for clarity in `TnTDataGrid.razor.cs`.
- Modified `tntInitResizable` function in `TnTDataGrid.razor.js` to skip placeholder columns during resizing.
- Added styles for the resizer in `TnTDataGrid.razor.scss` to ensure proper positioning and appearance.

--- a/TnTComponents/Grid/Infrastructure/TnTDataGridHeaderRow.razor
+++ b/TnTComponents/Grid/Infrastructure/TnTDataGridHeaderRow.razor
@@ -2,6 +2,11 @@
 @inherits TnTDataGridRow<TGridItem>
 <thead class="tnt-data-grid-header">
     <tr class="@($"tnt-data-grid-header-row{(Context.RowClickCallback.HasDelegate ? " tnt-interactable" : string.Empty)}")" scope="row" aria-rowindex="1">
+        @if (Context.RowClickCallback.HasDelegate) {
+            <th class="tnt-interactable-placeholder">
+
+            </th>
+        }
         @foreach (var column in Context.Columns) {
             <TnTDataGridHeaderCell Column="@column" />
         }
