Add compact appearance to DataGrid component
Enhanced the `TnTDataGrid` in `DataGridComponent.razor` by adding the `DataGridAppearance.Compact` option for a more streamlined look. Updated styles in `TnTDataGrid.razor.scss` to support the new compact mode, including adjustments for text overflow, height, and hover effects.

--- a/TnTComponents/Grid/TnTDataGrid.razor.scss
+++ b/TnTComponents/Grid/TnTDataGrid.razor.scss
@@ -37,6 +37,31 @@
             @include typescale.tnt-body-medium;
         }
     }
+
+
+    &.tnt-compact {
+        width: 100%;
+
+        ::deep {
+            tr {
+                td {
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    overflow: clip;
+                    height: 32px;
+                }
+
+                @media #{measurements.$medium-and-up} {
+                    &:hover {
+                        td {
+                            white-space: revert;
+                            text-overflow: revert;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
 
 @keyframes empty-grid-cell-animation {
