--- a/TnTComponents/Layout/TnTSideNav.razor
+++ b/TnTComponents/Layout/TnTSideNav.razor
@@ -14,7 +14,8 @@
          lang="@ElementLang"
          id="@ElementId"
          title="@ElementTitle"
-         @ref="Element">
+         @ref="Element"
+         data-permanent>
         @ChildContent
     </div>
 </CascadingValue>
